test/sema/positive/call_simple.impala
fn f(x:int, g:fn(int) -> bool) -> bool {
   g(x)
}