test/sema/negative/struct03.impala
struct S {
    x: int,
    x: bool
}
